<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="property"
            type="com.aysesenses.creditcalculationapp.data.model.DepositProperty" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/image_bank_logo"
            load_image="@{property.bank_logo}"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/description_bank_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/income_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/darkBlueTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtToplamMaaliyet"
            app:layout_constraintEnd_toEndOf="parent"
            app:textPrice="@{property.net_income.toString()}"
            tools:text="198" />

        <TextView
            android:id="@+id/bank_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="none"
            android:fontFamily="@font/rubik_medium"
            android:maxLines="2"
            android:text="@{property.bank_name}"
            android:textAlignment="viewStart"
            android:textColor="@color/darkBlueTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/image_bank_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_bank_logo"
            app:layout_constraintTop_toTopOf="@+id/image_bank_logo"
            tools:text="Akbank" />

        <TextView
            android:id="@+id/bank_interest_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/rubik_medium"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtfaiz"
            app:layout_constraintStart_toEndOf="@+id/txtfaiz"
            app:textInterest="@{property.bank_interest.toString()}"
            tools:text="1.29" />

        <TextView
            android:id="@+id/txtfaiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/faiz_orani"
            app:layout_constraintStart_toStartOf="@+id/image_bank_logo"
            app:layout_constraintTop_toBottomOf="@+id/image_bank_logo" />

        <TextView
            android:id="@+id/txtToplamMaaliyet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/toplam_tutar"
            app:layout_constraintStart_toStartOf="@+id/txtfaiz"
            app:layout_constraintTop_toBottomOf="@+id/txtfaiz" />

        <TextView
            android:id="@+id/txtAylikTaksit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/net_kazanc"
            app:layout_constraintBottom_toTopOf="@+id/income_text"
            app:layout_constraintEnd_toEndOf="@+id/income_text" />

        <TextView
            android:id="@+id/total_income_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/rubik_medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtToplamMaaliyet"
            app:layout_constraintStart_toEndOf="@+id/txtToplamMaaliyet"
            app:textPrice="@{property.total_income.toString()}"
            tools:text="125.253" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>